--- a/Contactform.html
+++ b/Contactform.html
@@ -13,7 +13,7 @@
             position: fixed;
             width: 100vw;
             height: 100vh;
-            background-image: url("23.jpg");
+            background-image: url("photo-1547071286-4c6552bbe26b.jpeg");
             background-position: center center;
             background-repeat: no-repeat;
             background-attachment: fixed;
@@ -97,7 +97,7 @@ background: rgba(0,0,0,.5);
 </head>
 <body>
     <div class="contact-form">
-        <img src="3.jpg" class="avatar">
+        <img src="   head-treasure-flower-disk-flowers-inflorescence-ray.jpg" class="avatar">
         <h2>Contact Form</h2>
         <form>
             <p>Email</p>
